--- a/index.html
+++ b/index.html
@@ -27,39 +27,38 @@
           <ul class="user-list">
             <li class="user-item">
               <a class="option option-come-in" href="#">
-                <svg class="icon" aria-hidden="true" focusable="false" width="13" height="12" fill="currentcolor"
+                <!--<svg class="icon" aria-hidden="true" focusable="false" width="13" height="12" fill="currentcolor"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="M0 12h13c-.2-2.6-2.1-4.8-4.7-5.5 1-.6 1.7-1.7 1.7-3C10 1.6 8.4 0 6.5 0S3 1.6 3 3.5c0 1.3.7 2.4 1.7 3C2.1 7.2.2 9.4 0 12Z" />
-                </svg>
-
+                </svg>-->
                 <span class="come-in">Войти</span>
               </a>
             </li>
             <li class="user-item">
-              <a class="option option-1">
-                <span class="visually-hidden come-out">Выйти</span>
+              <a class="option option-come-out">
+                <span class="out come-out">Выйти</span>
               </a>
             </li>
 
             <li class="user-item">
-              <a class="option option-2" href="#">
-                <svg class="icon" aria-hidden="true" focusable="false" width="10" height="12" fill="none"
+              <a class="option option-compare" href="#">
+              <!--  <svg class="icon" aria-hidden="true" focusable="false" width="10" height="12" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path d="M6 0H4v12h2V0ZM2 4H0v8h2V4ZM10 3H8v9h2V3Z" fill="#000" />
-                </svg>
+                </svg>-->
                 <span class="compare">Сравнить</span>
               </a>
             </li>
             <li class="user-item">
-              <a class="option option-3" href="#">
-                <svg class="icon icon-basket" aria-hidden="true" focusable="false" width="16" height="14" fill="none"
+              <a class="option option-basket" href="#">
+               <!-- <svg class="icon icon-basket" aria-hidden="true" focusable="false" width="16" height="14" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
                     d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z"
                     fill="#000" />
-                </svg>
-                <svg class="icon" aria-hidden="true" focusable="false" width="21" height="22" viewBox="0 0 21 22"
+                </svg>-->
+             <svg class="icon" aria-hidden="true" focusable="false" width="21" height="22" viewBox="0 0 21 22"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="10.5" cy="11" r="10.5" fill="white" />
                   <path
@@ -246,8 +245,8 @@
           </div>
         </div>
 
-        <!--
-        <div class="promo-product ">
+
+        <div class="promo-product promo-product-none">
           <div class="promo-product-slider">
             <img class="slider-image" src="images/promo-products/slider-2.png" width="560" height="560" alt="Фитнес-браслет".>
           </div>
@@ -266,7 +265,7 @@
           </div>
         </div>
 
-        <div class="promo-product">
+        <div class="promo-product promo-product-none">
           <div class="promo-product-slider">
             <img class="slider-image" src="images/promo-products/slider-3.png" width="560" height="560"
               alt="Палка для селфи длиной восемь метров и весом всего 5 кг".>
@@ -293,7 +292,7 @@
             </ul>
           </div>
         </div>
-      -->
+
       </section>
 
       <section class="container products-categories">
