--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
   <body>
     <header class="page-header">
       <div class="container page-header-container">
-        <a class="logo" href="#">
+        <a class="logo">
           <img class="logo-image" src="images/logo-black.svg" width="145" height="36"
             alt="Логотип интернет-магазина Device.">
         </a>
-
         <div class="user-menu">
           <form class="form" action="https://echo.htmlacademy.ru/" method="post">
             <label for="search"></label>
@@ -22,15 +21,9 @@
             <div class="search-focus"></div>
             <button class="text page-header-button" type="submit"><span>Найти</span></button>
           </form>
-
           <ul class="user-list">
             <li class="user-item">
               <a class="option option-come-in" href="#">
-                <!--<svg class="icon" aria-hidden="true" focusable="false" width="13" height="12" fill="currentcolor"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="M0 12h13c-.2-2.6-2.1-4.8-4.7-5.5 1-.6 1.7-1.7 1.7-3C10 1.6 8.4 0 6.5 0S3 1.6 3 3.5c0 1.3.7 2.4 1.7 3C2.1 7.2.2 9.4 0 12Z" />
-                </svg>-->
                 <span class="come-in">Войти</span>
               </a>
             </li>
@@ -39,24 +32,13 @@
                 <span class="out come-out">Выйти</span>
               </a>
             </li>
-
             <li class="user-item">
               <a class="option option-compare" href="#">
-                <!--  <svg class="icon" aria-hidden="true" focusable="false" width="10" height="12" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path d="M6 0H4v12h2V0ZM2 4H0v8h2V4ZM10 3H8v9h2V3Z" fill="#000" />
-                </svg>-->
                 <span class="compare">Сравнить</span>
               </a>
             </li>
             <li class="user-item">
               <a class="option option-basket" href="#">
-                <!-- <svg class="icon icon-basket" aria-hidden="true" focusable="false" width="16" height="14" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <path
-                    d="m15.3 5-3.5.2L8.6.3C8.5.1 8.2 0 8 0c-.2 0-.5.1-.6.3L4.2 5.2H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1L16 6v-.2c0-.4-.3-.8-.7-.8ZM8 1.9l2.2 3.2H5.9L8 1.9Z"
-                    fill="#000" />
-                </svg>-->
                 <svg class="icon" aria-hidden="true" focusable="false" width="21" height="22" viewBox="0 0 21 22"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="10.5" cy="11" r="10.5" fill="white" />
@@ -66,7 +48,6 @@
                 </svg>
                 <span class="basket">Корзина</span>
               </a>
-
               <div class="popover popover-cart popover-open">
                 <div class="popover-content">
                   <ul class="cart-items-list">
@@ -86,7 +67,6 @@
                         <span class="visually-hidden">Удалить из корзины</span>
                       </button>
                     </li>
-
                     <li class="cart-item">
                       <a class="cart-link" href="#" target="_blank">
                         <img class="cart-item-image" src="images/product/product-2-small.png" width="39" height="43"
@@ -141,7 +121,6 @@
                     </li>
                   </ul>
                 </li>
-
                 <li class="subcatalog-column">
                   <ul class="subcatalog-list">
                     <li class="subcatalog-item">
@@ -152,7 +131,6 @@
                     </li>
                   </ul>
                 </li>
-
                 <li class="subcatalog-column">
                   <ul class="subcatalog-list">
                     <li class="subcatalog-item">
@@ -162,7 +140,6 @@
                 </li>
               </ul>
             </li>
-
             <li class="navigation-item">
               <a class="navigation-link" href="delivery.html"><span>Доставка</span></a>
             </li>
@@ -199,7 +176,6 @@
               <span class="visually-hidden">Следующее фото</span>
             </button>
           </div>
-
           <div class="promo-product-slider">
             <img class="slider-image" src="images/promo-products/slider-1.png" width="560" height="560" alt="Квадрокоптер c мощным лазером, замаскированным под
               стандартную камеру, с дальностью полета до 800 м и радиусом поражения 50 м.">
@@ -222,7 +198,6 @@
               </li>
             </ul>
           </div>
-
           <div class="promo-product-indicators">
             <ol class="indicators-list">
               <li class="indicators-item">
@@ -243,8 +218,6 @@
             </ol>
           </div>
         </div>
-
-
         <div class="promo-product promo-product-none">
           <div class="promo-product-slider">
             <img class="slider-image" src="images/promo-products/slider-2.png" width="560" height="560"
@@ -265,11 +238,10 @@
             </ul>
           </div>
         </div>
-
         <div class="promo-product promo-product-none">
           <div class="promo-product-slider">
             <img class="slider-image" src="images/promo-products/slider-3.png" width="560" height="560"
-              alt="Селфи-палка может использоваться и как штатив, и как селфи-палка. Длина телескопической штанги достигает 8 метров. Материал изготовления  — карбон. Позволяет крепить все виды фото- и видеоаппаратуры.">
+              alt="Селфи-палка используется как штатив и как селфи-палка. Длина телескопической штанги из карбона до 8 метров. Крепить все виды фото- и видеоаппаратуры.">
           </div>
           <div class="promo-product-content">
             <span class="promo-product-number">03</span>
@@ -294,7 +266,6 @@
             </ul>
           </div>
         </div>
-
       </section>
 
       <section class="container products-categories">
@@ -364,13 +335,11 @@
                   Ведь <br> мы
                   неплохо заработаем, поднимая его на ваш этаж.</p>
               </div>
-
               <div class="services-image">
                 <img class="services-image-1" src="images/services/service-1.svg" width="136" height="164"
                   alt="Логотип сервиса Доставка.">
               </div>
             </li>
-
             <li class="services-item services-next visually-hidden">
               <div class="services-text">
                 <h3 class="title">Гарантия</h3>
@@ -383,7 +352,6 @@
                   alt="Логотип сервиса Гарантия.">
               </div>
             </li>
-
             <li class="services-item services-next visually-hidden">
               <div class="services-text">
                 <h3 class="title">Кредит</h3>
@@ -400,75 +368,11 @@
         </div>
       </section>
 
-      <!--     <section class="container">
-        <h2 class="visually-hidden">Доставка редкого товара под заказ</h2>
-        <a class="advantage-link" href="">
-          <div class="advantage">
-            <div class="advantage-image">
-              <svg aria-hidden="true" focusable="false" width="47" height="31" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="m46.7 15.4-6.5-8.2c-.3-.4-.7-.6-1.2-.6h-8.3V1.5C30.7.7 30 0 29.2 0H1.5C.7 0 0 .7 0 1.5S.7 3 1.5 3h26.2v21.7H15.8c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.2 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h13.4c.8 0 1.5-.7 1.5-1.5V9.6h7.6l5.7 7.3v7.9h-2.2c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.1 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h3.7c.8 0 1.5-.7 1.5-1.5v-9.9c0-.4-.1-.7-.3-1ZM11.3 28c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Zm26.1 0c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Z"
-                  fill="#000" />
-                <path
-                  d="M19.4 9.6c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5H4.8c-.8 0-1.5.7-1.5 1.5S4 9.6 4.8 9.6h14.6ZM17.7 14.7c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.7c.8 0 1.5-.7 1.5-1.5Z"
-                  fill="#000" />
-              </svg>
-            </div>
-
-            <p class="title title-advantage">Доставим редкий товар под заказ</p>
-
-            <div class="icon-information">
-              <svg aria-hidden="true" focusable="false" width="2" height="12" fill="currentcolor"
-                xmlns="http://www.w3.org/2000/svg">
-                <g opacity="0.5" clip-path="url(#a)">
-                  <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z" />
-                </g>
-                <defs>
-                  <clipPath id="a">
-                    <path fill="#fff" d="M0 0h2v12H0z" />
-                  </clipPath>
-                </defs>
-              </svg>
-            </div>
-          </div>
-        </a>
-      </section>-->
-
-
       <section class="container">
         <h2 class="visually-hidden">Доставка редкого товара под заказ</h2>
         <div class="advantage">
           <a class="advantage-link" href="">
-
-            <!--<div class="advantage-image">
-              <svg aria-hidden="true" focusable="false" width="47" height="31" fill="none"
-                xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="m46.7 15.4-6.5-8.2c-.3-.4-.7-.6-1.2-.6h-8.3V1.5C30.7.7 30 0 29.2 0H1.5C.7 0 0 .7 0 1.5S.7 3 1.5 3h26.2v21.7H15.8c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.2 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h13.4c.8 0 1.5-.7 1.5-1.5V9.6h7.6l5.7 7.3v7.9h-2.2c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.1 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h3.7c.8 0 1.5-.7 1.5-1.5v-9.9c0-.4-.1-.7-.3-1ZM11.3 28c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Zm26.1 0c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8Z"
-                  fill="#000" />
-                <path
-                  d="M19.4 9.6c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5H4.8c-.8 0-1.5.7-1.5 1.5S4 9.6 4.8 9.6h14.6ZM17.7 14.7c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.7c.8 0 1.5-.7 1.5-1.5Z"
-                  fill="#000" />
-              </svg>
-            </div>-->
-
             <p class="title title-advantage">Доставим редкий товар под заказ</p>
-
-            <!--      <div class="icon-information">
-             <svg aria-hidden="true" focusable="false" width="2" height="12" fill="black"
-                xmlns="http://www.w3.org/2000/svg">
-                <g opacity="1" clip-path="url(#a)">
-                  <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z" />
-                </g>
-                <defs>
-                  <clipPath id="a">
-                    <path fill="#fff" d="M0 0h2v12H0z" />
-                  </clipPath>
-                </defs>
-              </svg>
-          </div>
-        -->
             <svg class="info" aria-hidden="true" focusable="false" width="2" height="12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#a)" fill="#000">
@@ -480,8 +384,6 @@
                 </clipPath>
               </defs>
             </svg>
-
-
           </a>
         </div>
       </section>
@@ -501,18 +403,15 @@
           </ul>
           <a class="button about-us-button" href="#">Подробнее о нас</a>
         </div>
-
         <div class="contacts">
           <h3 class="title title-contacts">Контакты</h3>
           <p class="text text-contacts">Вы можете забрать товар сами, заехав в наш офис.<br> Заодно сможете проверить
             работоспособность покупки.</p>
           <h4 class="text text-subtitle">Интернет-магазин «Девайс»</h4>
-
           <address class="contacts-address">
             <p class="text text-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
             <a class="text text-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
           </address>
-
           <h4 class="text text-subtitle">Время работы</h4>
           <ul class="contacts-time">
             <li class="text">пн—пт: с 10:00 до 22:00</li>
@@ -541,14 +440,12 @@
               Это бесплатно
             </span>
           </div>
-
         </div>
       </section>
     </main>
 
     <footer class="page-footer">
       <div class="container">
-
         <a class="logo-footer" href="#">
           <svg aria-hidden="true" focusable="false" width="145" height="36" fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -558,14 +455,12 @@
           </svg>
           <span class="visually-hidden">Логотип-ссылка интернет-магазина Device</span>
         </a>
-
         <div class="footer-wrapper">
           <div class="footer-left">
             <address class="footer-address">
               <p class="text text-address-footer">Санкт-Петербург, набережная<br> реки Карповки, 5, литера П.</p>
             </address>
           </div>
-
           <div class="footer-center">
             <div class="footer-navigation">
               <ul class="footer-navigation-list">
@@ -616,12 +511,10 @@
               </ul>
             </div>
           </div>
-
           <div class="footer-right">
             <address class="footer-phone">
               <a class="text  text-phone text-phone-footer" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
             </address>
-
             <div class="html-logo">
               <a class="htmlacademy-link" href="https://htmlacademy.ru/">
                 <svg class="htmlacademy" aria-hidden="true" focusable="false" width="115" height="33"
@@ -629,7 +522,6 @@
                   <path
                     d="M0 12.9v2.6h2.5v-2.6H0ZM11.6 4.5c-1.6 0-2.8.7-3.6 1.7h-.1V0h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.4c.1-3-1.8-4.9-4.5-4.9ZM26.6 4.8h-4.8V1.1h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V6.8h4.8v-2ZM41.1 4.6c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1V4.8H29v10.6h2V10c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2V9.8c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V8.9c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 12.7c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V0h-2v12.7ZM28.9 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1V22ZM55.1 19.7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2V18.2h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 19.8c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2V13.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 17.9c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 17.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
                 </svg>
-                <!--<img src="images/logo-html-academy.svg" width="115" height="33" alt="Логотин HTML-академии".>-->
               </a>
             </div>
           </div>
@@ -644,7 +536,6 @@
         </button>
         <section class="modal-content">
           <h2 class="modal-title">Доставка под заказ</h2>
-
           <form class="advantage-form" action="https://echo.htmlacademy.ru/" method="post">
             <div class="advantage-form-wrapper">
               <p class="field-group field-group-name">
@@ -659,14 +550,12 @@
                 <span>Забавный у вас адрес</span>
               </p>
             </div>
-
             <div class="advantage-form-wrapper">
               <p class="field-group field-group-product">
                 <label class="label-field" for="advantage-product">Что нужно привезти</label>
                 <input class="advantage-form-field field-product" type="text" id="advantage-product"
                   name="advantage-product" placeholder="В свободной форме">
               </p>
-
               <p class="field-group field-group-amount">
                 <span class="label-field-eeee label-field-icon">
                   <label class="label-field label-field-amount" for="advantage-amount"> Количество:</label>
@@ -683,10 +572,8 @@
                     </span>
                   </span>
                 </span>
-
                 <input class="advantage-form-field field-amount error-amount" type="text" id="advantage-amount"
                   name="advantage-amount" placeholder="1">
-
                 <button class="button-amount button-amount-minus" type="button">
                   <svg width="16" height="2" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16 0H0v2h16V0Z" fill="#000" />
