--- a/product.html
+++ b/product.html
@@ -8,24 +8,18 @@
   </head>
 
   <body>
-
-
     <header class="page-header">
       <div class="container inner-header-container">
-        <a class="logo" href="#">
+        <a class="logo" href="index.html">
           <img class="logo-image" src="images/logo-black.svg" width="145" height="36"
             alt="Логотип интернет-магазина Device.">
         </a>
-
         <div class="user-menu">
           <form class="form" action="https://echo.htmlacademy.ru/" method="post">
-
             <label for="search"></label>
             <input class="search search-catalog" type="search" name="search" id="search" placeholder="Текст поиска">
-
             <button class="text page-header-button" type="submit"><span>Найти</span></button>
           </form>
-
           <ul class="user-list">
             <li class="user-item">
               <a class="option option-come-in" href="#">
@@ -37,7 +31,6 @@
                 <span class="out come-out">Выйти</span>
               </a>
             </li>
-
             <li class="user-item">
               <a class="option option-compare" href="#">
                 <span class="compare">Сравнить</span>
@@ -73,7 +66,6 @@
                         <span class="visually-hidden">Удалить из корзины</span>
                       </button>
                     </li>
-
                     <li class="cart-item">
                       <a class="cart-link" href="#" target="_blank">
                         <img class="cart-item-image" src="images/product/product-2-small.png" width="39" height="43"
@@ -104,7 +96,6 @@
                   </button>
                 </div>
               </div>
-
             </li>
           </ul>
         </div>
@@ -128,7 +119,6 @@
                     </li>
                   </ul>
                 </li>
-
                 <li class="subcatalog-column">
                   <ul class="subcatalog-list">
                     <li class="subcatalog-item">
@@ -139,7 +129,6 @@
                     </li>
                   </ul>
                 </li>
-
                 <li class="subcatalog-column">
                   <ul class="subcatalog-list">
                     <li class="subcatalog-item">
@@ -149,7 +138,6 @@
                 </li>
               </ul>
             </li>
-
             <li class="navigation-item">
               <a class="navigation-link" href="delivery.html"><span>Доставка</span></a>
             </li>
@@ -164,19 +152,16 @@
       </div>
     </header>
 
-
     <main class="main-inner">
       <header class="container inner-header">
         <h1 class="title">Моноподы для селфи</h1>
         <ul class="breadcrumbs">
           <li class="breadcrumbs-item">
             <a class="text text-breadcrumbs" href="index.html">Главная</a>
-
           </li>
           <li class="breadcrumbs-item">
             <a class="text text-breadcrumbs" href="catalog.html">Каталог товаров</a>
           </li>
-
           <li class="breadcrumbs-item">
             <a class="text text-breadcrumbs">Моноподы для селфи</a>
           </li>
@@ -203,7 +188,6 @@
                       </button>
                     </div>
                   </div>
-
                   <div class="range-wrapper-inputs">
                     <label class="catalog-filter-label">
                       от <input class="range-input" type="number" value="0" name="min-price" style="width: 28px">
@@ -214,7 +198,6 @@
                   </div>
                 </div>
               </fieldset>
-
               <fieldset class="product-filter-group product-filter-group-color">
                 <legend class="product-filter-group-title title-color">Цвет</legend>
                 <ul class="product-filter-list">
@@ -257,7 +240,6 @@
                   </li>
                 </ul>
               </fieldset>
-
               <fieldset class="product-filter-group product-filter-group-bluetooth">
                 <legend class="product-filter-group-title title-bluetooth">Bluetooth</legend>
                 <ul class="product-filter-list">
@@ -280,7 +262,6 @@
               <button class="button button-filter" type="button">Показать</button>
             </form>
           </div>
-
           <section class="sorting">
             <div class="sorting-select">
               <h2 class="title sorting-title">Сортировка:</h2>
@@ -291,7 +272,6 @@
                   <option value="expensive">Дорогие</option>
                 </select>
               </div>
-
               <a class="button-sort button-sort-up" href="#">
                 <svg width="12" height="10" fill="currentcolor" xmlns="http://www.w3.org/2000/svg">
                   <path d="m6 0 5.5 10H.5" />
@@ -305,14 +285,13 @@
                 <span class="visually-hidden">По убыванию</span></button>
               </a>
             </div>
-
             <div class="white">
               <ul class="product-list">
                 <li class="product-card">
                   <a class="product-card-link" href="product.html">
                     <div class="product-card-image-wrapper">
                       <img class="product-card-image" src="images/product/product-1.jpg" width="360" height="380"
-                        alt="Любительская селфи-палка черного цвета с телескопической металлической штангой. Позволяет фиксировать смартфоны в двух положениях и менять угол наклона держателя.">
+                        alt="Любительская селфи-палка черного цвета с телескопической металлической штангой и фиксированным смартфоном в одном из двух положениях.">
                       <button class="button card-button" type="button">Подробнее</button>
                       <span class="button new">New</span>
                     </div>
@@ -322,28 +301,25 @@
                     </div>
                   </a>
                 </li>
-
                 <li class="product-card">
                   <a class="product-card-link" href="product.html">
                     <div class="product-card-image-wrapper">
                       <img class="product-card-image" src="images/product/product-2.jpg" width="360" height="380" alt="
-                        Профессиональная селфи-палка черного цвета с металлической регулиремой штангой. Имеет дистанционное управление.">
+                        Профессиональная селфи-палка черного цвета с металлической регулиремой штангой и с дистанционным управлением.">
                       <button class="button card-button" type="button">Подробнее</button>
                       <div class="button new">New</div>
                     </div>
                     <div class="text-product-wrapper">
-
                       <h3 class="text product-card-title">Профессиональная <br> селфи-палка</h3>
                       <span class="text product-card-price">1 500 ₽</span>
                     </div>
                   </a>
                 </li>
-
                 <li class="product-card">
                   <a class="product-card-link" href="product.html">
                     <div class="product-card-image-wrapper">
                       <img class="product-card-image" src="images/product/product-3.jpg" width="360" height="380" alt="
-                        Непотопляемая селфи-палка желто-черного цвета. Предназначена для водных и подводных съемок с помощью GoPro.">
+                        Непотопляемая селфи-палка желто-черного цвета для водных и подводных съемок с прикрепленной GoPro.">
                       <button class="button card-button" type="button">Подробнее</button>
                       <div class="button new">New</div>
                     </div>
@@ -358,7 +334,7 @@
                   <a class="product-card-link" href="product.html">
                     <div class="product-card-image-wrapper">
                       <img class="product-card-image" src="images/product/product-4.jpg" width="360" height="380" alt="
-                        Селфи-палка «Следуй за мной» представляет собой компактное устройство, которое крепится на руку, с двумя возможными положениями смартфона.">
+                        Селфи-палка «Следуй за мной» компактно крепится на руку с двумя возможными положениями смартфона.">
                       <button class="button card-button" type="button">Подробнее</button>
                       <div class="button new">New</div>
                     </div>
@@ -369,9 +345,7 @@
                   </a>
                 </li>
               </ul>
-
               <button class="button download-button" type="submit"><span>Загрузить ещё</span></button>
-
               <div class="pagination">
                 <ul class="pagination-list">
                   <li class="pagination-item">
@@ -407,11 +381,9 @@
       </section>
     </main>
 
-
     <footer class="page-footer">
       <div class="container">
-
-        <a class="logo-footer" href="#">
+        <a class="logo-footer" href="index.html">
           <svg aria-hidden="true" focusable="false" width="145" height="36" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path
@@ -420,14 +392,12 @@
           </svg>
           <span class="visually-hidden">Логотип-ссылка интернет-магазина Device</span>
         </a>
-
         <div class="footer-wrapper">
           <div class="footer-left">
             <address class="footer-address">
               <p class="text text-address-footer">Санкт-Петербург, набережная<br> реки Карповки, 5, литера П.</p>
             </address>
           </div>
-
           <div class="footer-center">
             <div class="footer-navigation">
               <ul class="footer-navigation-list">
@@ -478,12 +448,10 @@
               </ul>
             </div>
           </div>
-
           <div class="footer-right">
             <address class="footer-phone">
               <a class="text  text-phone text-phone-footer" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
             </address>
-
             <div class="html-logo">
               <a class="htmlacademy-link" href="https://htmlacademy.ru/">
                 <svg class="htmlacademy" aria-hidden="true" focusable="false" width="115" height="33"
