--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <li class="cart-item">
                       <a class="cart-link" href="#" target="_blank">
                         <img class="cart-item-image" src="images/product/product-1-small.png" width="39" height="43"
-                          alt="Любительская селфи-палка.">
+                          alt="Любительская селфи-палка черного цвета с телескопической металлической штангой и фиксированным смартфоном в одном из двух положениях.">
                         <span class="cart-item-name">Любительская <br> селфи-палка</span>
                       </a>
                       <button type="button" class="cart-item-button button">
@@ -70,7 +70,7 @@
                     <li class="cart-item">
                       <a class="cart-link" href="#" target="_blank">
                         <img class="cart-item-image" src="images/product/product-2-small.png" width="39" height="43"
-                          alt="Профессиональная селфи-палка.">
+                          alt="Профессиональная селфи-палка черного цвета с металлической регулиремой штангой и с дистанционным управлением.">
                         <span class="cart-item-name">Профессиональная <br> селфи-палка</span>
                       </a>
                       <button type="button" class="cart-item-button button">
@@ -335,8 +335,8 @@
                   Ведь <br> мы
                   неплохо заработаем, поднимая его на ваш этаж.</p>
               </div>
-              <div class="services-image">
-                <img class="services-image-1" src="images/services/service-1.svg" width="136" height="164"
+              <div class="image-wrapper">
+                <img class="services-image" src="images/services/service-1.svg" width="136" height="164"
                   alt="Логотип сервиса Доставка.">
               </div>
             </li>
@@ -347,7 +347,7 @@
                   выдадим
                   вам новый. Товар, не дом, конечно же.</p>
               </div>
-              <div class="services-image">
+              <div class="image-wrapper">
                 <img class="services-image" src="images/services/service-2.svg" width="171" height="195"
                   alt="Логотип сервиса Гарантия.">
               </div>
@@ -358,7 +358,7 @@
                 <p class="text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее
                   выгодные условия кредита. Выгодные для банка, разумеется.</p>
               </div>
-              <div class="services-image">
+              <div class="image-wrapper">
                 <img class="services-image" src="images/services/service-3.svg" width="156" height="188"
                   alt="Логотип сервиса Кредит.">
               </div>
