--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
     <title>Интернет-магазин "Device"</title>
   </head>
 
