--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="favicon.ico">
+    <!--<link rel="icon" href="favicon.ico">-->
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <title>Интернет-магазин "Device"</title>
   </head>
 
@@ -43,7 +44,7 @@
                 <span class="compare">Сравнить</span>
               </a>
             </li>
-            <li class="user-item">
+            <li class="user-item item-basket">
               <a class="option option-basket" href="#">
                 <svg class="icon" aria-hidden="true" focusable="false" width="21" height="22" viewBox="0 0 21 22"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -174,14 +175,14 @@
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M20 60h-3.5L0 30 16.5 0H20L3.8 30 20 60Z" fill="#000" />
               </svg>
-              <span class="visually-hidden">Предыдущее фото.</span>
+              <span class="visually-hidden">Предыдущее фото</span>
             </button>
             <button class="arrow arrow-next" type="button">
               <svg aria-hidden="true" focusable="false" width="20" height="60" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 0h3.5L20 30 3.5 60H0l16.2-30L0 0Z" fill="#000" />
               </svg>
-              <span class="visually-hidden">Следующее фото.</span>
+              <span class="visually-hidden">Следующее фото</span>
             </button>
           </div>
           <div class="promo-product-slider">
@@ -210,17 +211,17 @@
             <ol class="indicators-list">
               <li class="indicators-item">
                 <button class="indicators-button indicators-button-current" type="button">
-                  <span class="visually-hidden">1 фото.</span>
+                  <span class="visually-hidden">1 фото</span>
                 </button>
               </li>
               <li class="indicators-item">
                 <button class="indicators-button" type="button">
-                  <span class="visually-hidden">2 фото.</span>
+                  <span class="visually-hidden">2 фото</span>
                 </button>
               </li>
               <li class="indicators-item">
                 <button class="indicators-button" type="button">
-                  <span class="visually-hidden">3 фото.</span>
+                  <span class="visually-hidden">3 фото</span>
                 </button>
               </li>
             </ol>
@@ -625,7 +626,7 @@
 
     <div class="modal-container modal-container-close">
       <div class="modal modal-advantage">
-        <button class="modal-close-button">
+        <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть.</span>
         </button>
         <section class="modal-content">
