--- a/product.html
+++ b/product.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="favicon.ico">
+    <!--<link rel="icon" href="favicon.ico">-->
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <title>Моноподы для селфи</title>
   </head>
 
@@ -43,7 +44,7 @@
                 <span class="compare">Сравнить</span>
               </a>
             </li>
-            <li class="user-item">
+            <li class="user-item item-basket">
               <a class="option option-basket" href="#">
                 <svg class="icon" aria-hidden="true" focusable="false" width="21" height="22" viewBox="0 0 21 22"
                   fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -63,7 +64,7 @@
                           alt="Любительская селфи-палка.">
                         <span class="cart-item-name">Любительская <br> селфи-палка</span>
                       </a>
-                      <button type="button" class="cart-item-button button">
+                      <button class="cart-item-button button" type="button">
                         <svg aria-hidden="true" focusable="false" width="10" height="11" fill="none"
                           xmlns="http://www.w3.org/2000/svg">
                           <path
@@ -79,7 +80,7 @@
                           alt="Профессиональная селфи-палка.">
                         <span class="cart-item-name">Профессиональная <br> селфи-палка</span>
                       </a>
-                      <button type="button" class="cart-item-button button">
+                      <button class="cart-item-button button" type="button">
                         <svg aria-hidden="true" focusable="false" width="10" height="11" fill="none"
                           xmlns="http://www.w3.org/2000/svg">
                           <path
@@ -185,11 +186,11 @@
                 <div class="range">
                   <div class="range-scale">
                     <div class="range-bar" style="left: 0; width: 119px">
-                      <button class="range-toggle toggle-min">
+                      <button class="range-toggle toggle-min" type="button">
                         <span class="square"></span>
                         <span class="visually-hidden">Изменить минимальную цену.</span>
                       </button>
-                      <button class="range-toggle toggle-max">
+                      <button class="range-toggle toggle-max" type="button">
                         <span class="square"></span>
                         <span class="visually-hidden">Изменить максимальную цену.</span>
                       </button>
