--- a/product.html
+++ b/product.html
@@ -168,7 +168,7 @@
             <a class="text text-breadcrumbs" href="index.html">Главная</a>
           </li>
           <li class="breadcrumbs-item">
-            <a class="text text-breadcrumbs" href="catalog.html">Каталог товаров</a>
+            <a class="text text-breadcrumbs" href="#">Каталог товаров</a>
           </li>
           <li class="breadcrumbs-item">
             <a class="text text-breadcrumbs">Моноподы для селфи</a>
@@ -181,7 +181,7 @@
           <div class="filter">
             <h2 class="title filter-title">Фильтр:</h2>
             <form class="product-filter-form" action="https://echo.htmlacademy.ru/" method="get">
-              <fieldset class="product-filter-group">
+              <fieldset class="product-filter-group product-filter-group-range">
                 <legend class="product-filter-group-title">Стоимость</legend>
                 <div class="range">
                   <div class="range-scale">
