--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <nav class="navigation-menu">
           <ul class="navigation-list">
-            <li class="navigation-item menu">
+            <li class="navigation-item menu menu-open">
               <a class="catalog-toggler" href="product.html"><span>Каталог товаров</span>
               </a>
               <ul class="subcatalog">
